# CLIlib

./: .gitignore  CMakeLists.txt  README.md
CLIlib/: CLIlib.cpp  CLIlib.h  CMakeLists.txt  main.cpp
include/: CLIlib.h
src/: CLIlib.cpp  CLIlib.h  test.cpp
src/tests/: test.cpp
